--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.5.0"
   },
